# xander

./: .gitignore  Cargo.toml  MEETING-NOTES.md  README.md  pyproject.toml  test-stat.json
engine/: Cargo.toml
engine/src/: lib.rs
engine/src/core/: mod.rs
engine/src/core/dice/: expr.rs  mod.rs
engine/src/core/stats/: abilities.rs  mod.rs  skills.rs  stat_block.rs
engine/src/utils/: meta.rs  mod.rs  prettify.rs
engine/src/utils/proxy/: mod.rs  parts.rs
engine/tests/: stats_layout.rs
src/: lib.rs
src/core/: creature.rs  mod.rs
src/core/cause/: mod.rs
src/core/combat/: arena.rs  initiative_die.rs  mod.rs  movement.rs
src/core/combat/turn/: action.rs  mod.rs
src/core/dice/: expr.rs  mod.rs
src/core/geom/: mod.rs
src/core/stats/: abilities.rs  ac.rs  check.rs  damage.rs  mod.rs  monsters.rs  save.rs  skills.rs  stat_block.rs
src/py/: damage.rs  dice.rs  legality.rs  mod.rs  stats.rs
src/py/combat/: action.rs  arena.rs  attack.rs  mod.rs  speed.rs  turn.rs
src/serde/: damage.rs  dice.rs  mod.rs  monster.rs  saves.rs  stats.rs
src/serde/combat/: action.rs  attack.rs  mod.rs
src/serde/monster/: mod.rs  speed.rs
src/utils/: legality.rs  meta.rs  mod.rs
src/utils/proxy/: mod.rs  parts.rs
src/utils/reactive/: mod.rs
src/vis/: color.rs  find_replace.sksl  mod.rs
src/vis/rich/: mod.rs
tests/: rat.json
tests/python/: prop.ipynb
tests/rust/: stats_layout.rs
xander/: __init__.py
xander/engine/: __init__.py  actors.pyi  damage.pyi  dice.pyi  legality.pyi
xander/engine/combat/: __init__.pyi  speed.pyi  turn.pyi
(+15 files in other folders)
