[package]
name = "xander"
version = "0.1.0"
edition = "2021"

[features]
vis = ["dep:skia", "dep:base64", "dep:itertools"]

[lib]
name = "xander"
crate-type = ["lib", "cdylib"]


[[bin]]
name = "rat"
path = "bin/rat.rs"


[dependencies]
owo-colors = { version = "4.1.0", features = ["supports-colors"] }
paste = "1.0.15"
rand = "0.8.5"
pyo3 = { version = "0.23.3", features = [
    "abi3",
    "abi3-py312",
    "extension-module",
] }
serde = { version = "1.0.217", features = ["derive"] }
chumsky = { version = "0.9.3", features = ["nightly"] }
toml = "0.8.19"
serde_json = "1.0.138"
nalgebra = "0.33.2"
skia = { version = "0.81.0", optional = true, package = "skia-safe" }
base64 = { version = "0.22.1", optional = true }
itertools = { version = "0.14.0", optional = true }
crossbeam-utils = { version = "0.8.21" }
